# Workmate_v2

./: .gitignore  README.MD  pyproject.toml  requirements.txt
app/: .coverage  __init__.py  cli.py  models.py  run_script.py
app/analyzers/: employee_analyzer.py
app/readers/: __init__.py  base.py  csv_reader.py  json_reader.py
app/reports/: __init__.py  base.py  console_report.py  csv_report.py
app/tests/: __init__.py  conftest.py  test_cli.py  test_data_reader.py  test_emp_analyzer.py  test_integration.py  test_report_gen.py  test_validator.py
app/validators/: __init__.py  file_validator.py
data_folder/: new_report.csv
